--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,9 @@
 MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongodb.net/eCommerce?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+CORS_ORIGIN=http://localhost:3000/
+CLOUD_NAME = dxf4nqcqf
+API_KEY = 721611615439422
+API_SECRET = cJ5fOKJJWCv_eOKp38FUz96IDj0
+JWT_SECRET=jwt@123
+EMAIL_USER=bhagatstavan7@gmail.com
+EMAIL_PASS=pciv iwpu ydyk uyfz
