--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-router": "^6.23.1",
