--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongodb.net/eCommerce?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+CLIENT_URL=http://localhost:3000  
 CORS_ORIGIN=http://localhost:3000/
 CLOUD_NAME = dxf4nqcqf
 API_KEY = 721611615439422
