--- a/backend/.env
+++ b/backend/.env
@@ -6,5 +6,8 @@ CLOUD_NAME = dxf4nqcqf
 API_KEY = 721611615439422
 API_SECRET = cJ5fOKJJWCv_eOKp38FUz96IDj0
 JWT_SECRET=jwt@123
+JWT_REFRESH_SECRET=twj@123
+VERIFY_SECRET=veri@123
+CRYPTO_PASSWORD=Pass@123
 EMAIL_USER=bhagatstavan7@gmail.com
 EMAIL_PASS=pciv iwpu ydyk uyfz
