--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-ENCRYPT_PASSWORD_KEY=Pass@123
-BASEURL=http://localhost:5000/
+# REACT_APP_TEMP=sta123
+REACT_APP_ENCRYPT_PASSWORD_KEY=Pass@123
+REACT_APP_BASEURL=http://localhost:5000/
