--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@patternfly/react-core": "^5.3.3",
+    "@patternfly/react-icons": "^5.3.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-react": "^31.3.2",
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
