--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-js-loader": "^0.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
