--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,8 @@ VERIFY_SECRET=veri@123
 CRYPTO_PASSWORD=Pass@123
 EMAIL_USER=bhagatstavan7@gmail.com
 EMAIL_PASS=pciv iwpu ydyk uyfz
-
-ELASTIC_ENDPOINTURL= https://8338c34cec36425ca9d9e7c5dff7209e.ap-south-1.aws.elastic-cloud.com:443
+https://elastic-search.es.ap-south-1.aws.elastic-cloud.com
+# ELASTIC_ENDPOINTURL= https://8338c34cec36425ca9d9e7c5dff7209e.ap-south-1.aws.elastic-cloud.com:443
+ ELASTIC_ENDPOINTURL= https://8338c34cec36425ca9d9e7c5dff7209e.ap-south-1.aws.elastic-cloud.com:443
 ELASTIC_USERNAME=elastic
 ELASTIC_PASSWORD=nM9Yks6DBhZe0BtZ4UbwVVDu
