--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
