--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   }
 }
