--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongodb.net/eCommerce?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 CLIENT_URL=http://localhost:3000  
-CORS_ORIGIN=http://localhost:3000/
+CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,http://example.com
 CLOUD_NAME = dxf4nqcqf
 API_KEY = 721611615439422
 API_SECRET = cJ5fOKJJWCv_eOKp38FUz96IDj0
@@ -12,7 +12,8 @@ CRYPTO_PASSWORD=Pass@123
 EMAIL_USER=bhagatstavan7@gmail.com
 EMAIL_PASS=pciv iwpu ydyk uyfz
 https://elastic-search.es.ap-south-1.aws.elastic-cloud.com
-# ELASTIC_ENDPOINTURL= https://8338c34cec36425ca9d9e7c5dff7209e.ap-south-1.aws.elastic-cloud.com:443
- ELASTIC_ENDPOINTURL= https://8338c34cec36425ca9d9e7c5dff7209e.ap-south-1.aws.elastic-cloud.com:443
+ELASTIC_END_POINT_URL= https://8338c34cec36425ca9d9e7c5dff7209e.ap-south-1.aws.elastic-cloud.com:443
 ELASTIC_USERNAME=elastic
 ELASTIC_PASSWORD=nM9Yks6DBhZe0BtZ4UbwVVDu
+ACCESS_TOKEN_EXPIRE_TIME=15m
+REFRESH_TOKEN_EXPIRE_TIME=60m
