--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,12 @@
     "nodemon": "^3.1.0",
     "redis": "^4.6.14",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "sonarqube-scanner": "^4.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.4.0",
+    "globals": "^15.3.0"
   }
 }
