--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
+    "sonarqube-scanner": "^4.0.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
@@ -62,5 +63,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.3.0"
   }
 }
