--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,7 +67,9 @@
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.2",
-    "globals": "^15.3.0"
+    "globals": "^15.3.0",
+    "prettier": "^3.3.1"
   }
 }
