--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,22 +1,47 @@
 {
   "env": {
+    "node": true,
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
-  "extends": ["airbnb", "eslint:recommended", "plugin:react/recommended"],
+  "extends": ["airbnb", "eslint:recommended", "plugin:prettier/recommended"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "parserOptions": {
+    "ecmaVersion": "latest",
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
     "sourceType": "module"
   },
   "plugins": ["react"],
   "rules": {
-    "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1,
+        "ignoredNodes": ["TemplateLiteral", "comments"]
+      }
+    ],
     "semi": ["error", "always"],
-    "react/prop-types": 0
+    "no-multi-spaces": "error",
+    "react/prop-types": "error",
+    "consistent-return": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "no-nested-ternary": "off",
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
