--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^31.3.2",
     "ag-grid-react": "^31.3.2",
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "notistack": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
@@ -44,17 +47,22 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix-js": "eslint-auto-fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "eslint": "^8.57.0",
+    "eslint-auto-fix": "^1.0.4",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.3.0"
+    "globals": "^15.3.0",
+    "prettier": "^3.3.1"
   },
   "browserslist": {
     "production": [
@@ -67,16 +75,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-<<<<<<< HEAD
-=======
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.2",
-    "globals": "^15.3.0",
-    "prettier": "^3.3.1"
->>>>>>> 05b6d1174ba67909855e3bc68ed92420157183e8
   }
 }
