--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "printWidth": 100,
-    "tabWidth": 2,
-    "arrowParens": "always"
-  }
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "arrowParens": "always",
+  "endOfLine": "lf"
+}
