--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,49 +1,53 @@
 {
-    "env": {
-      "node": true,
-      "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": 2018
-    },
-    "rules": {
-      "indent": ["error", 2],
-      "linebreak-style": ["error", "unix"],
-      "quotes": ["error", "single"],
-      "semi": ["error", "always"],
-      "no-console": "off",
-      "no-unused-vars": ["error", { "args": "none" }],
-      "no-var": "error",
-      "prefer-const": "error",
-      "arrow-spacing": "error",
-      "block-spacing": "error",
-      "brace-style": "error",
-      "camelcase": "error",
-      "comma-dangle": ["error", "never"],
-      "comma-spacing": "error",
-      "eol-last": "error",
-      "func-call-spacing": "error",
-      "key-spacing": "error",
-      "keyword-spacing": "error",
-      "max-len": ["error", { "code": 100 }],
-      "new-cap": "error",
-      "no-array-constructor": "error",
-      "no-lonely-if": "error",
-      "no-multiple-empty-lines": ["error", { "max": 1 }],
-      "no-trailing-spaces": "error",
-      "no-unneeded-ternary": "error",
-      "no-whitespace-before-property": "error",
-      "object-curly-spacing": ["error", "always"],
-      "operator-linebreak": ["error", "after"],
-      "space-before-blocks": "error",
-      "space-before-function-paren": ["error", "never"],
-      "space-in-parens": "error",
-      "space-infix-ops": "error",
-      "space-unary-ops": "error",
-      "spaced-comment": "error",
-      "switch-colon-spacing": "error",
-      "template-tag-spacing": "error",
-      "yield-star-spacing": "error"
-    }
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "rules": {
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-console": "off",
+    "no-unused-vars": ["error", { "args": "none" }],
+    "no-var": "error",
+    "prefer-const": "error",
+    "arrow-spacing": "error",
+    "block-spacing": "error",
+    "brace-style": "error",
+    "camelcase": "error",
+    "comma-dangle": ["error", "never"],
+    "comma-spacing": "error",
+    "eol-last": "error",
+    "func-call-spacing": "error",
+    "key-spacing": "error",
+    "keyword-spacing": "error",
+    "max-len": ["error", { "code": 100 }],
+    "new-cap": "error",
+    "no-array-constructor": "error",
+    "no-lonely-if": "error",
+    "no-multiple-empty-lines": ["error", { "max": 1 }],
+    "no-trailing-spaces": "error",
+    "no-unneeded-ternary": "error",
+    "no-whitespace-before-property": "error",
+    "object-curly-spacing": ["error", "always"],
+    "operator-linebreak": ["error", "after"],
+    "space-before-blocks": "error",
+    "space-before-function-paren": [
+      "error",
+      "always",
+      { "anonymous": "always", "named": "never", "asyncArrow": "always" }
+    ],
+    "space-in-parens": "error",
+    "space-infix-ops": "error",
+    "space-unary-ops": "error",
+    "spaced-comment": "error",
+    "switch-colon-spacing": "error",
+    "template-tag-spacing": "error",
+    "yield-star-spacing": "error"
   }
+}
