--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "ecomsite",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon index.js",
-      "lint": "eslint .",
-      "lint:fix": "eslint --fix ."
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "@elastic/elasticsearch": "^8.13.1",
-      "body-parser": "^1.20.2",
-      "cloudinary": "^1.41.3",
-      "cors": "^2.8.5",
-      "crypto-js": "^4.2.0",
-      "dotenv": "^16.4.5",
-      "elasticsearch": "^16.7.3",
-      "express": "^4.19.2",
-      "jsonwebtoken": "^9.0.2",
-      "mongoose": "^8.4.0",
-      "multer": "^1.4.5-lts.1",
-      "multer-storage-cloudinary": "^4.0.0",
-      "node-cron": "^3.0.3",
-      "nodemailer": "^6.9.13",
-      "nodemon": "^3.1.0",
-      "redis": "^4.6.14",
-      "socket.io": "^4.7.5",
-      "socket.io-client": "^4.7.5",
-      "sonarqube-scanner": "^4.0.1"
-    },
-    "devDependencies": {
-      "eslint": "^8.57.0",
-      "eslint-config-airbnb-base": "^15.0.0",
-      "eslint-plugin-import": "^2.29.1"
-    }
+  "name": "ecomsite",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@elastic/elasticsearch": "^8.13.1",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "elasticsearch": "^16.7.3",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.3.1",
+    "prettier-eslint": "^16.3.0",
+    "redis": "^4.6.14",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "sonarqube-scanner": "^4.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   }
+}
