--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "prettier/prettier": ["error", { "endOfLine": "lf" }],
     "linebreak-style": ["error", "unix"],
     "indent": [
       "error",
