--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "redis": "^4.6.14",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "sonarqube-scanner": "^4.0.1"
+    "sonarqube-scanner": "^4.0.1",
+    "stripe": "^15.10.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
