--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,8 @@
 MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongodb.net/eCommerce?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 CLIENT_URL=http://localhost:3000
-CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,http://example.com
+CLIENT_ORIGIN=https://e-comsite-three.vercel.app/
+CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,https://e-comsite-three.vercel.app,https://e-comsite-three.vercel.app/
 CLOUD_NAME = dxf4nqcqf
 API_KEY = 721611615439422
 API_SECRET = cJ5fOKJJWCv_eOKp38FUz96IDj0
