--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,9 @@
 MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongodb.net/eCommerce?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 CLIENT_URL=http://localhost:3000
-CLIENT_ORIGIN=https://e-comsite-three.vercel.app/
-CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,https://e-comsite-three.vercel.app,https://e-comsite-three.vercel.app/,http://192.168.2.84:3000,http://192.168.2.84:3000/
-
-
+CLIENT_ORIGIN=http://192.168.243.173:3000/,https://e-comsite-three.vercel.app/,http://localhost:3000,http://localhost:3000/,http://192.168.2.84:3000,http://192.168.2.84:3000/
+# CLIENT_ORIGIN=http://localhost:3000/login
+CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,http://192.168.243.173:3000/,https://e-comsite-three.vercel.app,https://e-comsite-three.vercel.app/,http://192.168.2.84:3000,http://192.168.2.84:3000/
 CLOUD_NAME = dxf4nqcqf
 API_KEY = 721611615439422
 API_SECRET = cJ5fOKJJWCv_eOKp38FUz96IDj0
