--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "sonarqube-scanner": "^4.0.1",
-    "stripe": "^15.10.0"
+    "stripe": "^15.10.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
