--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -43,6 +43,13 @@
       }
     ],
     "no-nested-ternary": "off",
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-param-reassign": [
+      "error",
+      {
+        "props": true,
+        "ignorePropertyModificationsFor": ["state"]
+      }
+    ]
   }
 }
