--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongod
 PORT=5000
 CLIENT_URL=http://localhost:3000
 
-CLIENT_ORIGIN=http://192.168.243.173:3000/,https://e-comsite-three.vercel.app/,http://localhost:3000,http://localhost:3000/,http://192.168.2.84:3000,http://192.168.2.84:3000/
+CLIENT_ORIGIN=http://192.168.2.84:3000,http://192.168.2.84:3000/,http://192.168.243.173:3000/,https://e-comsite-three.vercel.app/,http://localhost:3000,http://localhost:3000/,
 BASEURL=http://192.168.2.84:5000
 CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,http://192.168.243.173:3000/,https://e-comsite-three.vercel.app,https://e-comsite-three.vercel.app/,http://192.168.2.84:3000,http://192.168.2.84:3000/
 CLOUD_NAME = dxf4nqcqf
