--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://bhagatstavan7:jzh9Or95DYmxArYx@cluster0.efhokdg.mongodb.net/eCommerce?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://e-comsite-three.vercel.app/
 CLIENT_ORIGIN=http://192.168.2.84:3000,http://192.168.2.84:3000/,http://192.168.243.173:3000/,https://e-comsite-three.vercel.app/,http://localhost:3000,http://localhost:3000/,
 BASEURL=https://e-comsite.onrender.com
 CORS_ORIGIN=http://localhost:3000,http://localhost:3000/,http://192.168.243.173:3000/,https://e-comsite-three.vercel.app,https://e-comsite-three.vercel.app/,http://192.168.2.84:3000,http://192.168.2.84:3000/
